"Front Faces Only" option in SculptMode behaves weird #34641

Closed
opened 2013-03-14 18:17:49 +01:00 by Sebastian Koenig · 4 comments

%%%--- Operating System, Graphics card ---
OSX 10.8.2, GTX660ti

- Blender version with error, and version that worked ---

r55284, same issue in release

- Short description of error ---

Something strange is going on with the option "Front Faces Only" for sculpt brushes. If the object is rotated it seems to screw up the normals, so you get wrong results when painting.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

In the attached blendfile there are 2 identical cubes, however the left one is rotated. With the "Front Faces Only" option you can paint on each side of the right cube perfectly fine, but on the left one that is only possible on some of the faces.

Beware though, enabling that option is currently only possible with release, during the recent brush and painting changes some options dissappeared. But even though eventually you cannot see the option, it should be still enabled in the attached file. I told Psy-Fi already, he's gonna fix.
%%%

%%%--- Operating System, Graphics card --- OSX 10.8.2, GTX660ti - Blender version with error, and version that worked --- r55284, same issue in release - Short description of error --- Something strange is going on with the option "Front Faces Only" for sculpt brushes. If the object is rotated it seems to screw up the normals, so you get wrong results when painting. - Steps for others to reproduce the error (preferably based on attached .blend file) --- In the attached blendfile there are 2 identical cubes, however the left one is rotated. With the "Front Faces Only" option you can paint on each side of the right cube perfectly fine, but on the left one that is only possible on some of the faces. Beware though, enabling that option is currently only possible with release, during the recent brush and painting changes some options dissappeared. But even though eventually you cannot see the option, it should be still enabled in the attached file. I told Psy-Fi already, he's gonna fix. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%To see if face is forward looking we test object space normals against world space view direction. Solution: transform view vector to object space. Nicholas, can you take a look to the attached patch?%%%

%%%To see if face is forward looking we test object space normals against world space view direction. Solution: transform view vector to object space. Nicholas, can you take a look to the attached patch?%%%

%%%Thanks for the patch, confirmed fix here and committed as r55343.
%%%

%%%Thanks for the patch, confirmed fix here and committed as r55343. %%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34641
No description provided.